--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.3.1",
     "history": "^5.3.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
