--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL = https://macros-counter-sugo17.onrender.com/api/
+# REACT_APP_BASE_URL = https://macros-counter-sugo17.onrender.com/api/
+REACT_APP_BASE_URL = http://localhost:4000/api/
