--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.3.1",
     "history": "^5.3.0",
@@ -26,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage --detectOpenHandles",
+    "test": "react-scripts test --coverage --detectOpenHandles --no-watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "jest": "^27.5.1"
   }
 }
