--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "start": "node dist/server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -21,5 +21,16 @@
     "mongoose": "^7.4.0",
     "nodemailer": "^6.9.16",
     "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "babel-loader": "^10.0.0",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "nodemon": "^3.1.10",
+    "webpack": "^5.102.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
